<resources>
    <string name="app_name">Project</string>
    <string name="deliciouso">Deliciouso!</string>
    <string name="our_job_is_to_filling_your_tummy_with">Our job is to filling your tummy with</string>
    <string name="delicous_food_and_fast_delivery">delicous food and fast delivery.</string>
    <string name="image">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="signin">Sign-In</string>
    <string name="sign_in">Sign-In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_new_user">If New User</string>
    <string name="the_food_at_your_doorstep_why_starve_when_you_have_us_you_hunger_partner_the_one_you_can_count_on_don_t_starve_just_order_good_food_within_minutes_delivering_happiness">The food at your doorstep Why starve when you have us You hunger partner The one you can count on Don’t starve, just order Good food within minutes Delivering happiness</string>
    <string name="search">search</string>
    <string name="download">cart</string>
    <string name="cart">cart</string>
    <string name="Menu">menu</string>
    <string name="home">home</string>
    <string name="Home">Project</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="health_is_important_for_us">Your health is important for us</string>
    <string name="my_cart">My Cart</string>
    <string name="Profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="aboutus">About us</string>
    <string name="about_us">About Us</string>
    <string name="call_us">Call us</string>
    <string name="Email">Email</string>
    <string name="food">Fast Foods</string>
    <string name="logout">menu_lougout</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_id">Order ID</string>
    <string name="enter_order_id">Enter Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="enter_order_date">Enter Order Date</string>
    <string name="enter_total_amount">Enter Total Amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="thank_you_for_placing_order">Thank you for placing order!!</string>
    <string name="please_rate_our_app">Please rate our app:</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="ordered_product">Ordered Product</string>

</resources>