<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".Order">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgF"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/last"
            android:contentDescription="TODO" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/order_id"
                android:layout_marginTop="8dp"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etorderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:layout_marginTop="8dp"
                android:text="@string/enter_order_id"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orderDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/order_date"
                android:layout_marginTop="8dp"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etorderDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/enter_order_date"
                android:layout_marginTop="8dp"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.50"
                android:text="Product Name"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etproduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.65"
                android:text="Enter Product"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deliverycharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.50"
                android:text="Delivery Fee"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etdecharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.65"
                android:text="Enter Delivery Charges"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:layout_marginTop="8dp"
                android:text="@string/total_amount"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etamount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:layout_marginTop="8dp"
                android:text="@string/enter_total_amount"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paymode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:layout_marginTop="8dp"
                android:text="@string/payment_mode"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/etpaymode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:layout_marginTop="8dp"
                android:text="@string/cash_on_delivery"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deliveryAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:layout_marginTop="8dp"
                android:text="@string/delivery_address"
                android:textColor="#FF9800"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etdeliveryAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.65"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Enter delivery address"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="#101010"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FF9800"
            android:text="CONFIRM ORDER DETAILS"
            android:textSize="18sp"
            app:cornerRadius="18dp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>